# Intro-to-Computer-Communications-HW1

./: .gitignore  CMakeLists.txt  Common.c  Common.h  Intro to communication PA1.sln  README  README.md  README.txt  WinSock_handlers.c  WinSock_handlers.h
Channel/: Channel.c  Channel.vcxproj  Channel.vcxproj.filters
Channel/x64/Debug/: Channel.exe.recipe  Channel.ilk  CodeAnalysisResultManifest.txt  vc142.idb  vc143.idb
Channel/x64/Debug/Channel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Channel.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Intro to communication PA1/: Intro to communication PA1.vcxproj
Intro to communication PA1/x64/Debug/: Intro to communication PA1.exe.recipe
Receiver/: Receiver.c  Receiver.vcxproj  Receiver.vcxproj.filters
Receiver/x64/Debug/: CodeAnalysisResultManifest.txt  Receiver.exe.recipe  Receiver.ilk  vc142.idb  vc143.idb
Receiver/x64/Debug/Receiver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Receiver.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sender/: Sender.c  Sender.vcxproj  Sender.vcxproj.filters
Sender/x64/Debug/: CodeAnalysisResultManifest.txt  Sender.exe.recipe  Sender.ilk  vc142.idb  vc143.idb
Sender/x64/Debug/Sender.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+4 more)
Utils/: Common.c  Common.h  Constants.h  Utils.vcxproj  Utils.vcxproj.filters  WinSock_handlers.c  WinSock_handlers.h
Utils/x64/Debug/: Utils.exe.recipe  Utils.ilk  vc143.idb
x64/Debug/: Channel.ilk  Receiver.ilk  Sender.ilk  Utils.idb  Utils.lib  test_result.txt
(+9 files in other folders)
